--- a/website/templates/properties.html
+++ b/website/templates/properties.html
@@ -13,9 +13,9 @@
 			<h2>{{ property.name }}</h2>
 			{% if cruleset.userid == current_user.id %}
 				<div>
-					<a href="/Reference/Items/Properties/Edit/{{ property.name.replace(' ', '-') }}"><button style="width: auto">Edit {{ property.name }}</button></a>
-					<a href="/Reference/Items/Properties/Duplicate/{{ property.name.replace(' ', '-') }}"><button style="width: auto">Duplicate {{ property.name }}</button></a>
-					<a href="/Reference/Items/Properties/Delete/{{ property.name.replace(' ', '-') }}"><button class="mild danger" style="width: auto">Delete {{ property.name }}</button></a>
+					<a href="/Reference/Items/Properties/Edit/{{ property.name }}"><button style="width: auto">Edit {{ property.name }}</button></a>
+					<a href="/Reference/Items/Properties/Duplicate/{{ property.name }}"><button style="width: auto">Duplicate {{ property.name }}</button></a>
+					<a href="/Reference/Items/Properties/Delete/{{ property.name }}"><button class="mild danger" style="width: auto">Delete {{ property.name }}</button></a>
 				</div>
 			{% endif %}
 			<hr>
