--- a/website/templates/tags.html
+++ b/website/templates/tags.html
@@ -13,9 +13,9 @@
 			<h2>{{ tag.name }}</h2>
 			{% if cruleset.userid == current_user.id %}
 				<div>
-					<a href="/Reference/Items/Tags/Edit/{{ tag.name.replace(' ', '-') }}"><button style="width: auto">Edit {{ tag.name }}</button></a>
-					<a href="/Reference/Items/Tags/Duplicate/{{ tag.name.replace(' ', '-') }}"><button style="width: auto">Duplicate {{ tag.name }}</button></a>
-					<a href="/Reference/Items/Tags/Delete/{{ tag.name.replace(' ', '-') }}"><button class="mild danger" style="width: auto">Delete {{ tag.name }}</button></a>
+					<a href="/Reference/Items/Tags/Edit/{{ tag.name }}"><button style="width: auto">Edit {{ tag.name }}</button></a>
+					<a href="/Reference/Items/Tags/Duplicate/{{ tag.name }}"><button style="width: auto">Duplicate {{ tag.name }}</button></a>
+					<a href="/Reference/Items/Tags/Delete/{{ tag.name }}"><button class="mild danger" style="width: auto">Delete {{ tag.name }}</button></a>
 				</div>
 			{% endif %}
 			<hr>
