--- a/website/templates/races.html
+++ b/website/templates/races.html
@@ -52,7 +52,10 @@
 			</template>
 		</table>
 		{% if cruleset.userid == user.id %}
-		<a href="{{ url_for('epchar.createRace') }}"><button>Create A Race</button></a>
+		<div class="interior flex horizontal center">
+			<a href="{{ url_for('epchar.createRace') }}"><button>Create A Race</button></a>
+			<a href="{{ url_for('epchar.importRace') }}"><button>Import from JSON</button></a>
+		</div>
 		{% endif %}
 	</div>
 </div>
