readme, imported race languages

--- a/website/templates/races.html
+++ b/website/templates/races.html
@@ -17,7 +17,7 @@
 				asis: {{ race.asis }},
 				asitext: '{{ race.asi_text }}',
 				size: {{ race.size }},
-				sizetext: {{ race.size_text }}
+				sizetext: `{{ race.size_text }}`
 			}
 		)"></template>
 		{% endfor %}
