--- a/website/templates/import-race.html
+++ b/website/templates/import-race.html
@@ -9,8 +9,29 @@
 <div class="flex">
 	<form class="flex vertical start" method="post" x-data="main">
 		<h1 @click="console.log(parsed_races)">Import a Race</h1>
-        <input type="file" id="race-file" name="race-file" x-model="race_file" accept=".json" @change="parse()">
+
+		<label for="race-file"><h3>Race Features</h3></label>
+        <input 
+			type="file" 
+			id="race-file" 
+			name="race-file" 
+			x-model="race_file" 
+			accept=".json" 
+			@change="parseRace()">
         <input type="hidden" id="parsed_races" name="parsed_races" x-model="parsed_races">
+
+		<hr>
+
+		<label for="flavor-file"><h3>Race Flavor Text</h3></label>
+		<input
+			type="file"
+			id="flavor-file"
+			name="flavor-file"
+			x-model="flavor_file"
+			accept=".json"
+			@change="parseFlavor()">
+		<input type="hidden" id="parsed_flavor" name="parsed_flavor" x-model="parsed_flavor">
+
 		<a href="/Reference/Actions/Create"><button type="submit">Import Race!</button></a>
 	</form>
 </div>
