--- a/website/templates/races.html
+++ b/website/templates/races.html
@@ -54,7 +54,7 @@
 		{% if cruleset.userid == user.id %}
 		<div class="interior flex horizontal center">
 			<a href="{{ url_for('epchar.createRace') }}"><button>Create A Race</button></a>
-			<a href="{{ url_for('epchar.importRace') }}"><button>Import from JSON</button></a>
+			<a href="{{ url_for('epchar.importRaces') }}"><button>Import from JSON</button></a>
 		</div>
 		{% endif %}
 	</div>
