--- a/website/templates/backgrounds.html
+++ b/website/templates/backgrounds.html
@@ -62,7 +62,10 @@
 			</template>
 		</table>
 		{% if cruleset.userid == user.id %}
-		<a href="/Character/Backgrounds/Create"><button>Create A Background</button></a>
+		<div class="interior flex horizontal center">
+			<a href="/Character/Backgrounds/Create"><button>Create A Background</button></a>
+			<a href="{{ url_for('epchar.importBackgrounds') }}"><button>Import from JSON</button></a>
+		</div>
 		{% endif %}
 	</div>
 </div>
