--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -47,6 +47,8 @@
 		<div class="dropdown-content">
 			<a href="/Reference/Actions">Actions</a>
 			<a href="/Reference/Conditions">Conditions</a>
+			<a href="/Reference/Diseases">Diseases</a>
+			<a href="/Reference/Statuses">Statuses</a>
 			<a href="/Reference/Items">Items & Adventuring Gear</a>
 			<a href="/Reference/Items/Tags">Item Types</a>
 			<a href="/Reference/Items/Properties">Weapon Properties</a>
