--- a/website/templates/spells.html
+++ b/website/templates/spells.html
@@ -86,7 +86,10 @@
 			</template>
 		</table>
 		{% if cruleset.userid == user.id %}
-		<a href="/Reference/Spells/Create"><button>Create A Spell</button></a>
+		<div class="interior flex horizontal center">
+			<a href="/Reference/Spells/Create"><button>Create A Spell</button></a>
+			<a href="{{ url_for('eprefs.importSpells') }}"><button>Import from JSON</button></a>
+		</div>
 		{% endif %}
 	</div>
 </div>
