--- a/website/templates/create-skill.html
+++ b/website/templates/create-skill.html
@@ -37,7 +37,7 @@
             {% endif %}
         </form>
         <h1 x-text="name"></h1>
-        <p x-html="'<strong>Ability Score: </strong>' + abilitydict[ability]"></p>
+        <p x-html="'<strong>Ability Score: </strong>' + ability"></p>
         <div x-html="convert(text)"></div>
     </div>
 </div>
