--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -13,6 +13,15 @@
             <p>Additionally, it is genrally inadvisable to keep exceedingly private information in Wayfinder. All of your information other than your email address and password is stored in plaintext. Should anyone break into the machine that the server is running on and steal the database file (such as by exploiting a bug mentioned above), they would have access to <em>all of your content</em>.</p>
         </div>
         {% endif %}
+        <p>Currently Planned Features:</p>
+        <ul>
+            <li>Beautification</li>
+            <li>Hyperlink Support (presently URLs must be hard-coded in markdown)</li>
+            <li>5e.tools export functionality</li>
+            <li>Import classes from 5e.tools</li>
+            <li>Import entire rulesets from 5e.tools</li>
+            <li>Full support for background and item importing (presently, some things just don't import correctly)</li>
+        </ul>
     </div> 
 </div>
 {% endblock %}
